# bifrost

./: .gitignore  Cargo.toml  LICENSE  README.md  member_a.txt  member_b.txt
src/: lib.rs
src/conshash/: mod.rs  weights.rs
src/dht/: mod.rs  weights.rs
src/duable_queue/: mod.rs
src/durable_queue/: mod.rs
src/hasher/: Cargo.toml
src/hasher/src/: lib.rs
src/membership/: client.rs  member.rs  mod.rs  server.rs
src/plugins/: Cargo.toml
src/plugins/src/: lib.rs
src/proc_macro/: Cargo.toml
src/proc_macro/src/: lib.rs
src/raft/: client.rs  client_conflict-20180108-201423.rs  disk.rs  mod.rs  state_machine.rs
src/raft/state_machine/: configs.rs  macros.rs  master.rs  mod.rs
src/raft/state_machine/callback/: client.rs  mod.rs  server.rs
src/rpc/: client.rs  connection.rs  mod.rs  proto.rs  server.rs
src/rpc/tcp/: framed.rs  mod.rs
src/shortcut/: mod.rs  tcp.rs
src/storage/: mod.rs
src/store/: map.rs  mod.rs  number.rs  value.rs
src/tcp/: client.rs  framed.rs  mod.rs  proto.rs  server.rs  shortcut.rs
src/utils/: bincode.rs  bindings.rs  fut_exec.rs  hash.rs  math.rs  mod.rs  mutex.rs  rwlock.rs  serde.rs  time.rs  u8vec.rs
src/utils/async_locks/: mod.rs  mutex.rs  rwlock.rs
src/utils/future_parking_lot/: mod.rs  mutex.rs
src/vector_clock/: mod.rs
tests/: conshash.rs  dht.rs  membership.rs  raft.rs  rpc.rs  tests.rs  vector_clock.rs
tests/raft/: callback.rs  mod.rs  primary.rs
tests/store/: map.rs  mod.rs  number.rs  value.rs
tests/utils/: math.rs
