[package]
name = "bifrost"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
name = "bifrost"

[[test]]
name = "tests"

[dependencies]
bincode = "*"
byteorder = "1"
env_logger = "*"
log = "*"
serde = "*"
serde_derive = "*"
bifrost_plugins = { path = "src/plugins" }
bifrost_hasher = { path = "src/hasher" }
rand = "*"

lazy_static = "*"
threadpool = "1"
num_cpus = "1"
parking_lot = {version = "*", features = ["nightly"]}
thread-id = "3"

tokio = { version = "0.2", features = ["full"] }
tokio-util = {version = "0.2", features = ["full"]}
bytes = "0.5"
crc32fast = "*"

futures = "0.3"

[dev-dependencies]
rayon = "1"