[package]
name = "bifrost"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
name = "bifrost"

[dependencies]
bincode = "*"
byteorder = "1"
log = "*"
serde = { version = "1.0", features = ["derive"] }
bifrost_plugins = { path = "src/plugins" }
bifrost_hasher = { path = "src/hasher" }
rand = "*"

lazy_static = "*"
threadpool = "1"
num_cpus = "1"
parking_lot = {version = "*", features = ["nightly"]}
thread-id = "3"

tokio = { version = "0.2", features = ["full"] }
tokio-util = {version = "0.3.1", features = ["full"]}
bytes = "0.5"
crc32fast = "*"

futures = {version = "0.3", features = ["executor", "thread-pool"] }
futures-timer = "3.0.2"
async-trait = "0.1.30"
async-std = "1.5.0"

[dev-dependencies]
env_logger = "*"