[package]
name = "bifrost"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

[lib]
name = "bifrost"

[dependencies]
serde_cbor = "0.11.1"
serde_json = "1.0.51"
byteorder = "1"
log = "*"
serde = { version = "1.0", features = ["derive"] }
bifrost_plugins = { path = "src/plugins" }
bifrost_hasher = { path = "src/hasher" }
bifrost_proc_macro = { path = "src/proc_macro" }
rand = "*"

lazy_static = "*"
threadpool = "1"
num_cpus = "1"
parking_lot = {version = "*", features = ["nightly"]}
thread-id = "4"

tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["full"]}
tokio-stream = "0.1"
bytes = "1"
crc32fast = "*"

futures = {version = "0.3", features = ["executor", "thread-pool"] }
futures-timer = "3"
async-std = "1"
lightning-containers = { git = "ssh://git@192.168.10.134/shisoft-x/Lightning.git", branch = "develop" }

[dev-dependencies]
env_logger = "*"